# blimp

./: .gitignore  Cargo.toml  README.md  build-hook.sh.template  build-hook.template  cross_compile_env.sh  install.sh  rust-toolchain.toml
.github/workflows/: check.yml  codeql.yml  testing.yml
assets/css/: style.css
assets/js/: graph.js  job.js
assets/pages/: graph.html  home.html  job.html  package_desc.html
bootstrap/: .gitignore  README.md  init.sh
bootstrap/desc/binutils/: build-hook  package.json
bootstrap/desc/binutils1/: build-hook  metadata.toml  package.json
bootstrap/desc/binutils2/: build-hook  metadata.toml  package.json
bootstrap/desc/gcc/: build-hook  metadata.toml
bootstrap/desc/gcc-libgcc/: build-hook  metadata.toml
bootstrap/desc/gcc1/: build-hook  metadata.toml  package.json
bootstrap/desc/gcc2/: build-hook  metadata.toml  package.json
bootstrap/desc/libstdc++/: build-hook  metadata.toml  package.json
bootstrap/desc/linux-headers/: build-hook  metadata.toml  package.json
bootstrap/desc/musl/: build-hook  metadata.toml  package.json
bootstrap/desc/zlib/: build-hook  metadata.toml  package.json
builder/: Cargo.toml
builder/src/: build.rs  cache.rs  desc.rs  main.rs  util.rs
client/: Cargo.toml
client/src/: confirm.rs  install.rs  main.rs  remote.rs  remove.rs  update.rs
common/: Cargo.toml
common/src/: build_desc.rs  download.rs  install.rs  lib.rs  lock.rs  lockfile.rs  package.rs  request.rs  util.rs  version.rs
common/src/repository/: mod.rs  remote.rs
cross/: .gitignore  README.md  build.sh  env.sh
cross/desc/binutils/: build-hook  package.json
cross/desc/clang/: build-hook  package.json
cross/desc/musl/: build-hook  package.json
man/man7/: blimp.7
man/man8/: blimp.8
scripts/: build_toolchain.sh  cross_compile_env.sh
server/: Cargo.toml  default_config.json
server/src/: config.rs  dashboard.rs  global_data.rs  job.rs  main.rs  package.rs  util.rs
server/src/route/: mod.rs  package.rs
src/: confirm.rs  install.rs  lockfile.rs  main.rs  package.rs  remote.rs  version.rs
src/builder/: build_desc.rs  main.rs
src/common/: build_desc.rs  download.rs  lib.rs  package.rs  remote.rs  request.rs  util.rs  version.rs
src/common/repository/: local.rs  mod.rs  remote.rs
src/server/: config.rs  dashboard.rs  global_data.rs  job.rs  main.rs  package.rs  util.rs
