[package]
name = "blimp-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
common = { path = "../common" }
file-lock = "2.1.11"
rust-s3 = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.5"

[features]
default = ["network"]
network = ["common/network"]
