[package]
name = "blimp-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
common = { path = "../common" }
file-lock = "2.1.11"
libc = "0.2.186"
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.8"

[features]
default = ["network"]
network = ["common/network"]
