[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
bzip2 = "0.4.4"
flate2 = "1.0.34"
futures = "0.3.31"
futures-util = "0.3.31"
infer = "0.16.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "stream"], optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tar = "0.4.43"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["io"] }
utils = { git = "https://github.com/maestro-os/maestro-utils" }
xz2 = "0.1.7"

[features]
default = []
network = ["dep:reqwest"]
