[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
bzip2 = "0.5.2"
flate2 = "1.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.11"
infer = "0.19.0"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "stream"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
utils = { git = "https://github.com/maestro-os/maestro-utils" }
xz2 = "0.1.7"

[features]
default = []
network = ["dep:reqwest"]
