[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
bzip2 = "0.6.1"
flate2 = "1.1.9"
futures-util = "0.3.32"
indicatif = "0.18.4"
infer = "0.19.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["stream"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = { version = "0.9.8" }
mutils = { git = "https://github.com/maestro-os/maestro-utils" }
xz2 = "0.1.7"

[features]
default = []
network = ["dep:reqwest"]
