[package]
name = "blimp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.5.0"
actix-web = "3"
common = { path = "../common" }
env_logger = "0.9.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

[features]
default = []
network = ["common/network"]
