[package]
name = "blimp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
common = { path = "../common" }
env_logger = "0.9.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"

[features]
default = []
network = ["common/network"]
